--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@
 capybara-*.html
 .rspec
 .rvmrc
+.DS_Store
+.idea/*
 /.bundle
 /vendor/bundle
 /log/*
@@ -23,3 +25,4 @@ pickle-email-*.html
 config/settings.local.yml
 config/settings/*.local.yml
 config/environments/*.local.yml
+
